[package]
name = "ac3rm"
version = "0.1.0"
authors = ["Riccardo De Benedictis"]
edition = "2024"
description = "An incremental AC-3rm propagator in Rust with dynamic assertion and retraction of constraints"
readme = "README.md"
repository = "https://github.com/pstlab/AC-3rm"
license-file = "LICENSE"
keywords = ["constraints", "arc-consistency", "ac3", "ac3rm", "csp"]
categories = ["algorithms", "data-structures"]

[dependencies]